# chip8-emulator

./: CMakeLists.txt  README.md
include/: chip8.hxx  emulator.hxx  font.hxx  launcher.hxx
src/: chip8.cpp  chip8.cxx  chip8.hpp  emulator.cxx  launcher.cpp  launcher.cxx  launcher.hpp  main.cpp  main.cxx
src/include/: chip8.hxx  constants.hxx  launcher.hxx
